--- a/settings.json
+++ b/settings.json
@@ -7,19 +7,19 @@
 	"anticall": true,
 	"prefix": ".",
 	"language":"ind",
-	"ownerNumber": "62887435047326",
-	"ownerNumberr": "62887435047326",
-	"cr": "@ZeeoneOfc",
+	"ownerNumber": "6281225110315",
+	"ownerNumberr": "6281225110315",
+	"cr": "@ebnudoang",
 	"yt":"bit.ly/ytzeeoneofc",
 	"grub": "bit.ly/gczeeoneofc",
 	"wa": "bit.ly/wazeeoneofc",
 	"donate": "bit.ly/dtzeeoneofc",
 	"ig": "bit.ly/igzeeoneofc",
 	"gt": "bit.ly/gtzeeoneofc",	
-	"ownername": "ZeeoneOfc",
-	"botname":"ΛᄂPΉΛ BӨƬ",
+	"ownername": "Ebnu",
+	"botname":"JametzBot",
 	"img":"https://e.top4top.io/p_2010lz9211.jpg",
 	"thumb":"IMG_20211001_074948_766-min.jpg",
 	"fakethumb":"IMG_20211001_074948_766-min.jpg", 
-	"fake": " 「  Alphabot  」\nCreated By @ZeeoneOfc"
+	"fake": " 「  JametzBot  」\nCreated By @ebnudoang"
 }
